# s3-uploader

./: .gitignore  .npmignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  web-test-runner.config.js
.github/: dependabot.yml
.github/workflows/: pr-checks.yaml  pr.yaml  release-please.yaml
backend/: docker-compose.yaml
backend/server/: Dockerfile  main.py  requirements.txt
example/client/src/: App.js
example/s3/: docker-entrypoint.sh
example/server/: main.py
rust/: Cargo.toml
rust/src/: lib.rs  utils.rs
src/: S3Uploader.ts  index.ts  utils.ts  worker.js
tests/: S3Uploader.test.ts  integration.test.ts  utils.ts
