[package]
name = "s3-multipart-upload"
version = "0.1.0"
repository = "https://github.com/tkasuz/s3-signurl-uploader/"
description = "🚀 Simplify file uploads to Amazon S3 with ease! This library provides a seamless interface for handling pre-signed URLs and multipart uploads."
license = "MIT OR Apache-2.0"
authors = ["tkasuz <tkasuz.dev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2" }
js-sys = "0.3.67"
wasm-bindgen-futures = "0.4.40"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.67"
features = [
  'console',
  'File',
  'FileReader',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
lto = true